--- a/index.html
+++ b/index.html
@@ -18,7 +18,30 @@
               through a computer network that is not reliant on any 
               central authority, such as a government or bank, to uphold or maintain it. 
     </section>
-
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <img src="" alt="" />
+                </div>
+                <div class="flip-card-back">
+                  <h2></h2>
+                  <p></p>
+                  <p><strong>Year Established:</strong></p>
+                  <p><strong>Founders:</strong></p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Repeat the above div for each cryptocurrency -->
+        </div>
+      </div>
+      
+   
+   
+   
     <!-- CARDS STart from -->
     <div class="row">
 
