--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     </div>
     <div class="topnav-links">
     <a class="active" href="#home">PREVIEW</a>
-    <a href="#news"> DETAILS</a>
-    <a href="#contact">REVIEWS</a>
+    <a href="#link2"> DETAILS</a>
+    <a href="#link3">REVIEWS</a>
     </div>
   </header>
-  <div class="slideshow-container"></div>
-  <h2 style="text-align: center;",> DETAILS </h2>
+  <div id="slideshow"></div>
+  <h2 style="text-align: center;"id="link2"> DETAILS </h2>
   <div class="main">
     
     <!-- CARDS STart from -->
@@ -238,7 +238,7 @@
   <form action="" >
     <div class="Kim">
     <div class="title">
-      <h2>REVIEWS</h2>
+      <h2 id="link3">REVIEWS</h2>
       <p>Did you enjoy the experience?</p>
       
     </div>
