--- a/index.html
+++ b/index.html
@@ -20,7 +20,42 @@
     <a href="#link3">REVIEWS</a>
     </div>
   </header>
-  <div id="slideshow"></div>
+  
+  <div class="slideshow-container">
+    <div class="mySlides fade">
+      <img src="/Images/Bitcoin.jpeg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="/Images/Binance.jpeg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="/Images/dai.avif" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="Images/Zcash.jpeg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="Images/Cardano.jpg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="Images/ethereum.jpeg" style="width:100%">
+    </div>
+  
+    <div class="mySlides fade">
+      <img src="/Images/Dogecoin.jpeg" style="width:100%">
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  
+
   <h2 style="text-align: center;"id="link2"> DETAILS </h2>
   <div class="main">
     
