--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@
     <div class="title">
       <h2 id="link3">REVIEWS</h2>
       <p>Did you enjoy the experience?</p>
+      <button class="like-btn" onclick="likeButton()">Like</button>
       
     </div>
      <div class="half">
