--- a/index.html
+++ b/index.html
@@ -275,7 +275,9 @@
     <div class="title">
       <h2 id="link3">REVIEWS</h2>
       <p>Did you enjoy the experience?</p>
-     
+      <button id="like-btn" class="btn">Like</button>
+<button id="unlike-btn" class="btn">Unlike</button>
+
     </div>
      <div class="half">
       <div class="item">
