--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
     <img src="Images\download.jpeg" alt="log" class="logo">
     </div>
     <div class="topnav-links">
-    <a class="active" href="#home">PREVIEW</a>
+    <a class="#link1" href="#home">PREVIEW</a>
     <a href="#link2"> DETAILS</a>
     <a href="#link3">REVIEWS</a>
     </div>
   </header>
-  
-  <div class="slideshow-container">
+  <div id="link1"> </div>
+  <div class="slideshow-container"> 
     <div class="mySlides fade">
-      <img src="/Images/Bitcoin.jpeg" style="width:100%">
+      <img src="/Images/coins.avif" style="width:100%">
     </div>
   
     <div class="mySlides fade">
@@ -48,7 +48,8 @@
   
     <div class="mySlides fade">
       <img src="/Images/Dogecoin.jpeg" style="width:100%">
-    </div>
+   
+  </div>
   
     <!-- Next and previous buttons -->
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -275,9 +276,7 @@
     <div class="title">
       <h2 id="link3">REVIEWS</h2>
       <p>Did you enjoy the experience?</p>
-      <button id="like-btn" class="btn">Like</button>
-<button id="unlike-btn" class="btn">Unlike</button>
-
+        
     </div>
      <div class="half">
       <div class="item">
