--- a/index.html
+++ b/index.html
@@ -21,41 +21,31 @@
     </div>
   </header>
   <div id="link1"> </div>
-  <div class="slideshow-container"> 
-    <div class="mySlides fade">
-      <img src="/Images/coins.avif" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="/Images/Binance.jpeg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="/Images/dai.avif" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="Images/Zcash.jpeg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="Images/Cardano.jpg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="Images/ethereum.jpeg" style="width:100%">
-    </div>
-  
-    <div class="mySlides fade">
-      <img src="/Images/Dogecoin.jpeg" style="width:100%">
-   
-  </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-  </div>
-  
+  <!-- Slideshow container -->
+<div class="slideshow-container">  <!-- Full-width images with number and caption text -->
+  <div class="mySlides fade">
+    <div class="numbertext">1 / 3</div>
+    <img src="/Images/coins.avif" style="width: 100%;" >
+    <div class="text">coins</div>
+  </div>  <div class="mySlides fade">
+    <div class="numbertext">2 / 3</div>
+    <img src="Karache Safaris Photos/sampleImage2.jpg" style="width: 100%;" >
+    <div class="text">Tsavo</div>
+  </div>  <div class="mySlides fade">
+    <div class="numbertext">3 / 3</div>
+    <img src="Karache Safaris Photos/sampleImage3.jpg" style="width: 100%;" >
+    <div class="text">Sarova Whitesands</div>
+  </div>  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br><!-- The dots/circles -->
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+</section>
 
   <h2 style="text-align: center;"id="link2"> DETAILS </h2>
   <div class="main">
