--- a/index.html
+++ b/index.html
@@ -26,26 +26,27 @@
   <div class="mySlides fade">
     <div class="numbertext">1 / 3</div>
     <img src="/Images/coins.avif" style="width: 100%;" >
-    <div class="text">coins</div>
+    <div class="text">Welcome</div>
   </div>  <div class="mySlides fade">
     <div class="numbertext">2 / 3</div>
-    <img src="Karache Safaris Photos/sampleImage2.jpg" style="width: 100%;" >
-    <div class="text">Tsavo</div>
+    <img src="/Images/brain.jpg" style="width: 100%;" >
+    <div class="text"> Karibu</div>
   </div>  <div class="mySlides fade">
     <div class="numbertext">3 / 3</div>
-    <img src="Karache Safaris Photos/sampleImage3.jpg" style="width: 100%;" >
-    <div class="text">Sarova Whitesands</div>
+    <img src="/Images/Dollar.jpg" style="width: 100%;" >
+    <div class="text">Salute!</div>
   </div>  <!-- Next and previous buttons -->
-  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-  <a class="next" onclick="plusSlides(1)">&#10095;</a>
-</div>
-<br><!-- The dots/circles -->
-<div style="text-align:center">
-  <span class="dot" onclick="currentSlide(1)"></span>
-  <span class="dot" onclick="currentSlide(2)"></span>
-  <span class="dot" onclick="currentSlide(3)"></span>
-</div>
-</section>
+   <!-- Next and previous buttons -->
+   <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+   <a class="next" onclick="plusSlides(1)">&#10095;</a>
+ </div>
+ <br><!-- The dots/circles -->
+ <div style="text-align:center">
+   <span class="dot" onclick="currentSlide(1)"></span>
+   <span class="dot" onclick="currentSlide(2)"></span>
+   <span class="dot" onclick="currentSlide(3)"></span>
+ </div>
+ </section>
 
   <h2 style="text-align: center;"id="link2"> DETAILS </h2>
   <div class="main">
