--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
   <title>Cryptos</title>
-</head>
-
-<body>
   <header class="topnav">
     <div class="logo-c">
     <img src="Images\download.jpeg" alt="log" class="logo">
@@ -20,7 +17,11 @@
     <a href="#link3">REVIEWS</a>
     </div>
   </header>
-  <div id="link1"> </div>
+  <h2 id="link1", style="text-align: center;">PREVIEW </div>
+</head>
+
+<body>
+ 
   <!-- Slideshow container -->
 <div class="slideshow-container">  <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
