--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
       <div class="title">
         <h2 id="link3">REVIEWS</h2>
         <p>Did you enjoy the experience?</p>
+        <div>
+          <span id="thumbs-up" class="thumb"></span>
+          <span id="thumbs-down" class="thumb"></span>
+        </div>
+        
 
       </div>
       <div class="half">
@@ -115,7 +120,7 @@
           </a>
         </div>
         <div>
-          <p>Or Call Us On +152343322</p>
+          <p>Or Call Us On +251-435-5242</p>
         </div>
       </div>
     </div>
